beware of my nightmare code