@@ -3,7 +3,14 @@ plugins {
 }
 
 group = 'org.example'
-version = '1.0-SNAPSHOT'
+version = '0.1'
+
+sourceCompatibility = JavaVersion.VERSION_19
+targetCompatibility = JavaVersion.VERSION_19
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
 
 repositories {
     mavenCentral()
@@ -16,4 +23,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview', '--enable-native-access=ALL-UNNAMED'])
 }
